[package]
name = "example"
version = "0.1.0"
authors = ["Michael Fairley <michaelfairley@gmail.com>"]

[lib]
crate-type = ["rlib", "dylib"]

[[bin]]
name = "main"

[dependencies]
hot = { path = "..", optional = true }
glium = "0.16"
glutin = "0.7"

[features]
hotload = ["hot"]
default = ["hotload"]
