[package]
name = "example"
version = "0.1.0"
authors = ["Michael Fairley <michaelfairley@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
hot = { path = "..", optional = true }
glium = "*"
glutin = "*"

[features]
hotload = ["hot"]
default = ["hotload"]
